--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
+    "mic-recorder-to-mp3": "^2.2.2",
     "next": "15.5.3",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
