--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mic-recorder-to-mp3": "^2.2.2",
-    "next": "15.5.3",
+    "next": "^16.0.0-canary.2",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
