--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mic-recorder-to-mp3": "^2.2.2",
-    "next": "^16.0.0-canary.2",
+    "next": "^15.5.4",
     "next-pwa": "^5.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0"
   },
