--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0"
   },
